@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.4.0
 
 	- Localization updates (STR #3223, STR #3246, STR #3248, STR #3250)
 	- Documentation updates (STR #3225, STR #3230, STR #3242)
+	- The scheduler did not do local job-hold-until processing for remote
+	  queues (STR #3258)
 	- The scheduler did not try all possible SSL certificates on Mac OS X.
 	- The scheduler did not always remove a file descriptor when using the
 	  kqueue interface (STR #3256)
